meta: use full names of Ansible roles
Signed-off-by: Jakub Sokołowski <jakub@status.im>

--- a/tasks/consul.yml
+++ b/tasks/consul.yml
@@ -1,6 +1,6 @@
 ---
 - name: Gorush | Create Consul service
-  include_role: name=consul-service
+  include_role: name=infra-role-consul-service
   vars:
     consul_config_name: '{{ gorush_cont_name }}'
     consul_services:
